@@ -227,6 +227,7 @@ optList[] = {
               STRG (Rs_embed, NULL, "embed", "windowid", "window id to embed terminal in"),
 #endif
 #if ENABLE_FRILLS
+              RSTRG (Rs_transient_for, "transient-for", "windowid"),
               STRG (Rs_pty_fd, NULL, "pty-fd", "fileno", "file descriptor of pty to use"),
               BOOL (Rs_hold, "hold", "hold", Opt_hold, "retain window after shell exit"),
               STRG (Rs_ext_bwidth, "externalBorder", "w", "number", "external border in pixels"),
